tests/stage2/t3_diagnostics/type_errors/break_outside_loop.fuse
// EXPECTED ERROR:
// `break` outside loop

@entrypoint
fn main() {
  break
}
